better running
	-run indoors
	-run without running shoes
	-no more running shoes tutorial

bugfixes
	-general bugfixes (built into decomp)
	-improved waitforvblank function, saving battery life and increasing fast forward speed (DizzyEggg)
	-ground effects are applied when you exit surfing (ghoulslash)
	-allow player to change direction while moving up or down (cbt)

modernized battles
	-fairy type (Lunos)
	-physical special split (voloved)
	-exp for catching Pokemon (Lunos)

reusable TMs (Lunos)